--- a/templates/publication/MesPublication.html.twig
+++ b/templates/publication/MesPublication.html.twig
@@ -1,10 +1,6 @@
 {% include 'header.html.twig' %}
 <br><br>
 <style>
-    $icon-font-path: '../fonts/';
-    // bower:scss
-    @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-    // endbower
 
        .my-gallery {
            width: 100%;
@@ -30,20 +26,6 @@
         padding-top: 50px;
         padding-bottom: 50px;
     }
-
-    .carte{
-        /*display:inline-block;*/
-    }
-
-    /*.inner{*/
-    /*    overflow:hidden;*/
-    /*}*/
-    /*.inner img{*/
-    /*    transition: all 1s ease;*/
-    /*}*/
-    /*.inner:hover img{*/
-    /*    transform: scale(1.2);*/
-    /*}*/
     body {
         font-family: "Lato", sans-serif;
     }
@@ -105,27 +87,24 @@
                 </div>
                 <div class="title-box text-center">
                     {% if app.user %}
-                        <a href="{{ path('newpost') }}"><button class="button button-a button-big button-rouded">Créer un nouvelle publication</button></a>
+                        {% if app.user.bloque!=1 %}
+                            <a href="{{ path('newpost') }}"><button class="button button-a button-big button-rouded">Créer une nouvelle publication</button></a>
+                        {% else %}
+                            <a href="#" disabled="disabled" title="Vous êtes bloqué pour le moment par un administrateur FINDME en raison de votre comportement !"><button class="button button-a button-big button-rouded">Créer une nouvelle publication</button></a>
+                        {% endif %}
                     {% else %}
-                        <button onclick="alertinfo();" class="button button-a button-big button-rouded">Créer un nouvelle publication</button>
-                        <script>
+                        <button onclick="alertinfo();" class="button button-a button-big button-rouded">Créer une nouvelle publication</button>
+                    {% endif %}
+                    <script>
                             function alertinfo(){
-                                // if(document.getElementById('testdiv').style.visibility === 'visible'){
-                                //     document.getElementById('testdiv').style.visibility = 'hidden';
-                                // }
                                 $('.alert').alert();
-                                // $(elem).show();
                                 document.getElementById('alert').style.visibility = 'visible';
-                                // $('.alert').alert();
-                                // document.getElementById('testdiv').style.visibility = 'visible';
                             }
                             function closediv(){
                                 $().alert('dispose');
                                 document.getElementById('alert').style.visibility = 'hidden';
-                                // $('.alert').alert();
                             }
                         </script>
-                    {% endif %}
                     <p class="subtitle-a">
                     </p>
                     <div class="line-mf">
@@ -140,61 +119,69 @@
         </div>
     </div>
 </section>
+<style>
+  .dropdown:hover{
+      color: lightskyblue;
+  }
+  .dropdown-item:hover{
+      color: lightskyblue;
+  }
 
+</style>
 <section style="margin-left: 20%" id="main">
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-    </div>
-
-    <span style="font-size:30px;cursor:pointer;margin-left:20px;margin-top: -100px " onclick="openNav()">&#9776; open</span>
     <script>
         function openNav() {
             document.getElementById("mySidenav").style.width = "250px";
             document.getElementById("main").style.marginLeft = "350px";
-            // document.getElementById("divcard").style.width = "65rem";
         }
         function closeNav() {
             document.getElementById("mySidenav").style.width = "0";
             document.getElementById("main").style.marginLeft= "20%";
-            // document.getElementById("divcard").style.width = "64rem";
         }
     </script>
-    <div  class=" container" >
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <div  class=" container">
         <div class="animated fadeIn carte " style="width: 64rem;" id="divcard">
             {% for pub in pubs %}
                 {% if pub.statut !="R" %}
-
                     <div class=" shadow p-3 mb-5 bg-white rounded card   ml-5 col-lg-8 carte"  style="border-radius: 20%">
-
+                        <p style="margin-left: 10px;font-size: small;color: lightsteelblue">Publié par {{pub.utilisateur.nom |upper}} {{ pub.utilisateur.prenom}}</p>
+                        <p style="margin-left: 490px;font-size: small;color: lightsteelblue;margin-top: -35px;">le {{ pub.datePub |date('d/m/Y H:i') }}</p>
+                        <div class="dropdown" >
+                            <i class="fas fa-ellipsis-h " href="#" style="font-size:25px;float:right;margin-top: -40px" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            </i>
+                            {% if app.user.bloque!=1 %}
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="delpost">
+                                    <a class="dropdown-item" href="{{ path('editpost',{'id':pub.id}) }}"><i class="far fa-edit"></i> Modifier</a>
+                                    <a class="dropdown-item"  onclick="delpost({{ pub.id }})" href="#"><i class="far fa-trash-alt"></i> Supprimer</a>
+                                </div>
+                            {% else %}
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="delpost">
+                                    <a title="Vous êtes bloqué pour le moment par un administrateur FINDME en raison de votre comportement !" class="dropdown-item"><i class="far fa-edit"></i> Modifier</a>
+                                    <a title="Vous êtes bloqué pour le moment par un administrateur FINDME en raison de votre comportement !" class="dropdown-item"><i class="far fa-trash-alt"></i> Supprimer</a>
+                                </div>
+                            {% endif %}
+                        </div>
                         {% if app.user != null %}
-                            {% if pub.datePub.diff(now).h>1 %}
+                            {% if pub.datePub.diff(now).days>24 %}
                                 {% if  pub.utilisateur.id==app.user.id %}
-                                    <div>
-                                        <h5 style="color: firebrick">this is a system check you must respond or this publication will be deleted</h5>
-                                        <a href="{{ path('Repost',{'id':pub.id}) }}"> <button class="button button-a  button-rouded" >repost</button></a>
-                                        <a href="{{ path('Solve',{'id':pub.id}) }}"><button class="button button-a  button-rouded">solved</button></a>
+                                    <br>
+                                    <div style="text-align: center">
+                                        <h6 style="color: firebrick;text-align: center">Il s'agit d'une vérification du système à laquelle vous devez répondre ou cette publication sera supprimée</h6>
+                                        <br><a href="{{ path('Repost',{'id':pub.id}) }}"> <button class="button button-a  button-rouded" >Républier</button></a>
+                                        <a href="{{ path('Solve',{'id':pub.id}) }}"><button class="button button-a  button-rouded">Résolue</button></a>
                                     </div>
                                     <br>
                                 {% endif %}
                             {% endif %}
                         {% endif %}
-                        <p style="margin-left: 10px;font-size: small;color: lightsteelblue">Publié par {{pub.utilisateur.nom |upper}} {{ pub.utilisateur.prenom}}</p>
-                        <p style="margin-left: 505px;font-size: small;color: lightsteelblue;margin-top: -35px;">le {{ pub.datePub |date('d/m/Y H:i') }}</p>
                         <div class="card-body" style="margin-top: -20px">
                             <h5 > {{ pub.nom }}</h5>
                             <h6 >{{ pub.sexe}}</h6>
                             <h6 >{{ pub.age}} ans </h6>
                             <div style="height: 100px;position: relative">
                                 <span style="font-size: small">{{ pub.contenuPub}}</span>
-
                             </div>
-                            {% if app.user != null %}
-                                {% if  pub.utilisateur.id==app.user.id %}
-                                    <a class="nav-link js-scroll" href="{{ path('editpost',{'id':pub.id}) }}">edit</a>
-                                {% endif %}
-                            {% endif %}
                             <div class="inner">
                                 <!--***** GALLERY *****-->
                                 {% if pub.mutimedia | length == 4 %}
@@ -238,7 +225,6 @@
                                         </figure>
                                     </div>
                                     {#                            <button class="button button-a  button-rouded">  {{ pub.commentaires|length }}</button>#}
-
                                 {% endif %}
                                 {% if pub.mutimedia | length == 3 %}
                                     <div class="my-gallery" itemscope>
@@ -317,18 +303,29 @@
                             </div>
                         </div>
                         {% if app.user %}
-                            <form  name="form" method="get" id="{{ pub.id }}" class="comment"  action="{{ path('newcomment',{'id':pub.id}) }}" >
-                                <input  type="text" placeholder="Ecrivez votre commentaire ici ..." style="padding: 11px;width: 490px" name="aa" id="aa" class="texte" >
-                                {#                <a href="{{ path('newcomment',{'id':pub.id}) }}"> <button type="submit" class="button rounded" style="padding: 12px;margin-top:-4px">submit</button></a>#}
-                                <a href="{{ path('singlepost',{'id':pub.id}) }}" > <p style="margin-top: -40px;margin-left:520px " ><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
-                                <br>
-
-                                <div style="background-color: #F6FDFE;padding: 1px;border-radius: 20px">
-                                    <span style="font-size: medium;font-weight: bold;margin-left: 10px" id="11" class="c1"></span>
-                                    <p class="msg" id="msg" style="font-size: small;margin-left: 10px"></p>
-                                </div>
-
-                            </form>
+                            {% if app.user.bloque!=1 %}
+                                <form  name="form" method="get" id="{{ pub.id }}" class="comment"  action="{{ path('newcomment',{'id':pub.id}) }}" >
+                                    <input  type="text" placeholder="Ecrivez votre commentaire ici ..." style="padding: 11px;width: 490px" name="aa" id="aa" class="texte" >
+                                    <a href="{{ path('singlepost',{'id':pub.id}) }}" > <p style="margin-top: -40px;margin-left:520px " ><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
+                                    <br>
+                                    <div style="background-color: #F6FDFE;padding: 1px;border-radius: 20px">
+                                        <span style="font-size: medium;font-weight: bold;margin-left: 10px" id="11" class="c1"></span>
+                                        <p class="msg" id="msg" style="font-size: small;margin-left: 10px"></p>
+                                    </div>
+                                </form>
+                            {% else %}
+                                <form  name="form" method="get" id="{{ pub.id }}" class="comment"  action="{{ path('newcomment',{'id':pub.id}) }}" >
+                                    <input  onclick = "boluqer()" disabled title="Vous êtes bloqué pour le moment par un administrateur FINDME en raison de votre comportement !"
+                                            type="text" placeholder="Ecrivez votre commentaire ici ..."
+                                            style="padding: 11px;width: 490px" name="aa" id="aa" class="texte" />
+                                    <a href="{{ path('singlepost',{'id':pub.id}) }}" > <p style="margin-top: -40px;margin-left:520px " ><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
+                                    <br>
+                                    <div style="background-color: #F6FDFE;padding: 1px;border-radius: 20px">
+                                        <span style="font-size: medium;font-weight: bold;margin-left: 10px" id="11" class="c1"></span>
+                                        <p class="msg" id="msg" style="font-size: small;margin-left: 10px"></p>
+                                    </div>
+                                </form>
+                            {% endif %}
                         {% else %}
                             <a href="{{ path('singlepost',{'id':pub.id}) }}" ><p style="margin-left:520px"><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
                         {% endif %}
@@ -338,9 +335,29 @@
         </div>
     </div>
 </section>
-{% block javascripts %}
+{#{% block javascripts %}#}
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
+        function delpost(d) {
+            console.log(d);
+            var r = confirm(" Êtes vous sure de vouloir supprimer cette publication ?");
+            if (r === true) {
+                $.ajax({
+                        url: "{{ path('supprimerpost') }}",
+                        type: 'post',
+                        data: {d: d},
+                        // dataType: 'json',
+                        success: function (da) {
+                            // if(da.test===true){
+                            $('#divcard').load(document.URL + ' #divcard');
+                            console.log("post supprimé")
+                            // }
+                        }
+                    }
+                )
+            }
+        }
+
         function onClickBtnLike(event){
             event.preventDefault();
             const url = this.action;
@@ -356,9 +373,8 @@
                 console.log(response.data);
                 count.textContent = response.data.nbrcomments;
                 span.textContent = response.data.message;
-
                 {% if app.user %}
-                com.textContent = " Added by {{ app.user.nom |upper }} {{ app.user.prenom }}"+"  at " + "  " + response.data.dateajout;
+                com.textContent = " Ajouté par {{ app.user.nom |upper }} {{ app.user.prenom }}"+"  à " + "  " + response.data.dateajout;
                 {% endif %}
                 $('#aa').value="";
                 // $('#msg').load(document.URL +  ' #msg');
@@ -368,9 +384,9 @@
         }
         document.querySelectorAll('form.comment').forEach(function (link) {
             link.addEventListener('submit',onClickBtnLike)
-        })
+        });
     </script>
-{% endblock %}
+{#{% endblock %}#}
 <!--***** PHOTOSWIPE *****-->
 <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="pswp__bg"></div>
@@ -412,14 +428,14 @@
 <!-- PhotoSwipe JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js"></script>
-<footer>
+<footer style="color: black">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="copyright-box">
                     <p class="copyright">&copy; Copyright <strong>FINDME</strong>. All Rights Reserved</p>
                     <div class="credits">
-                        Developed by <a href="https://bootstrapmade.com/">GALACTECH TEAM</a>
+                        Developed by <a href="#" style="color: black">GALACTECH TEAM</a>
                     </div>
                 </div>
             </div>
