--- a/templates/publication/post.html.twig
+++ b/templates/publication/post.html.twig
@@ -67,20 +67,6 @@
         .sidenav {padding-top: 15px;}
         .sidenav a {font-size: 18px;}
     }
-
-       /*#floating-panel {*/
-       /*    !*position: absolute;*!*/
-       /*    !*top: 10px;*!*/
-       /*    !*left: 25%;*!*/
-       /*    z-index: 5;*/
-       /*    background-color: #fff;*/
-       /*    padding: 5px;*/
-       /*    border: 1px solid #999;*/
-       /*    text-align: center;*/
-       /*    font-family: "Roboto", "sans-serif";*/
-       /*    line-height: 30px;*/
-       /*    !*padding-left: 10px;*!*/
-       /*}*/
        .map1 {
            margin-left: 20px;
            width: 92%;
@@ -92,18 +78,13 @@
 </style>
     <title>shyy</title>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/default-skin/default-skin.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdnbu2dKsKShoO4zqET8uFYY6EV4KapxE&callback=initMap&libraries=&v=weekly" defer></script>
-{#{% include 'header.html.twig' %}#}
-{#<script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&extension=.js"></script>#}
     <script>
-        // $(document).ready(function() {
             let map;
             let markers = [];
             function initMap() {
@@ -143,7 +124,11 @@
                 </div>
                 <div class="title-box text-center">
                     {% if app.user %}
-                       <a href="{{ path('newpost') }}"><button class="button button-a button-big button-rouded">Créer une nouvelle publication</button></a>
+                        {% if app.user.bloque!=1 %}
+                            <a href="{{ path('newpost') }}"><button class="button button-a button-big button-rouded">Créer une nouvelle publication</button></a>
+                        {% else %}
+                            <a href="#" disabled="disabled" title="Vous êtes bloqué pour le moment par un administrateur FINDME en raison de votre comportement !"><button class="button button-a button-big button-rouded">Créer une nouvelle publication</button></a>
+                        {% endif %}
                     {% else %}
                         <button onclick="alertinfo();" class="button button-a button-big button-rouded">Créer une nouvelle publication</button>
                     {% endif %}
@@ -152,7 +137,6 @@
                                 alert("Vous devez connecter à votre compte pour pouvoir créer un post ");
                             }
                         </script>
-
                     <p class="subtitle-a">
                     </p>
                     <div class="line-mf">
@@ -166,25 +150,12 @@
             </div>
         </div>
     </div>
-        </section>
-<<<<<<< Updated upstream
-    <div  class=" container" >
-
+    </section>
+    <div  class=" container"  style="margin-left: 280px">
     <div class="animated fadeIn carte " style="width: 64rem;" id="divcard">
-        {% for pub in pubs %}
+        {% for pub in pubs|sort((a, b) => b.datePub <=> a.datePub) %}
             {% if pub.statut !="R" %}
-
         <div class=" shadow p-3 mb-5 bg-white rounded card   ml-5 col-lg-8 carte"  style="border-radius: 20%">
-
-
-        <div id="map"></div>
-=======
-    <div  class=" container" style="margin-left: 280px">
->>>>>>> Stashed changes
-    <div class="animated fadeIn carte " style="width: 64rem;" id="divcard">
-        {% for pub in pubs %}
-            <div class=" shadow p-3 mb-5 bg-white rounded card   ml-5 col-lg-8 carte"  style="border-radius: 20%">
-
                 <p style="margin-left: 10px;font-size: small;color: lightsteelblue">Publié par {{pub.utilisateur.nom |upper}} {{ pub.utilisateur.prenom}}</p>
                 <p style="margin-left: 505px;font-size: small;color: lightsteelblue;margin-top: -35px;">le {{ pub.datePub |date('d/m/Y H:i') }}</p>
                 <div class="card-body" style="margin-top: -20px">
@@ -194,28 +165,12 @@
                     <div style="height: 100px;position: relative">
                        <span style="font-size: small">{{ pub.contenuPub}}</span>
                     </div>
-{#                    <div id="floating-panel">#}
-{#                        #}{#                    <input onclick="clearMarkers();" type="button" value="Hide Markers" />#}
-{#                        #}{#                    <input onclick="showMarkers();" type="button" value="Show All Markers" />#}
-{#                        <input onclick="deleteMarkers();" type="button" value="Delete Markers" />#}
-{#                    </div>#}
-
                     <div id="{{ pub.id }}" class="map1" style="height: 200px"></div>
                     <div class="test">
                         <input id="tableau1" type="hidden" value="{{ pub.longitude }}"/>
                         <input id="tableau2" type="hidden" value="{{ pub.latitude }}"/>
                     </div>
-<<<<<<< Updated upstream
-
-
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-=======
                     <br>
->>>>>>> Stashed changes
-{#                    {% if pub.utilisateur.id==app.user.id %}#}
-{#                    <a class="nav-link js-scroll" href="{{ path('editpost',{'id':pub.id}) }}">edit</a>#}
-{#                    {% endif %}#}
-
                     <div class="inner">
                         <!--***** GALLERY *****-->
                         {% if pub.mutimedia | length == 4 %}
@@ -333,47 +288,45 @@
                     </div>
                 </div>
             {% if app.user %}
-            <form  name="form" method="get" id="{{ pub.id }}" class="comment"  action="{{ path('newcomment',{'id':pub.id}) }}" >
-                <input  type="text" placeholder="Ecrivez votre commentaire ici ..." style="padding: 11px;width: 490px" name="aa" id="aa" class="texte" >
-{#                <a href="{{ path('newcomment',{'id':pub.id}) }}"> <button type="submit" class="button rounded" style="padding: 12px;margin-top:-4px">submit</button></a>#}
-                <a href="{{ path('singlepost',{'id':pub.id}) }}" > <p style="margin-top: -40px;margin-left:520px " ><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
-                    <br>
-                <div style="background-color: #F6FDFE;padding: 1px;border-radius: 20px">
-                    <span style="font-size: medium;font-weight: bold;margin-left: 10px" id="11" class="c1"></span>
-                    <p class="msg" id="msg" style="font-size: small;margin-left: 10px"></p>
-                </div>
-
-            </form>
+                {% if app.user.bloque!=1 %}
+                    <form  name="form" method="get" id="{{ pub.id }}" class="comment"  action="{{ path('newcomment',{'id':pub.id}) }}" >
+                        <input  type="text" placeholder="Ecrivez votre commentaire ici ..." style="padding: 11px;width: 490px" name="aa" id="aa" class="texte" >
+                        <a href="{{ path('singlepost',{'id':pub.id}) }}" > <p style="margin-top: -40px;margin-left:520px " ><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
+                        <br>
+                        <div style="background-color: #F6FDFE;padding: 1px;border-radius: 20px">
+                            <span style="font-size: medium;font-weight: bold;margin-left: 10px" id="11" class="c1"></span>
+                            <p class="msg" id="msg" style="font-size: small;margin-left: 10px"></p>
+                        </div>
+                    </form>
+                {% else %}
+                    <form  name="form" method="get" id="{{ pub.id }}" class="comment"  action="{{ path('newcomment',{'id':pub.id}) }}" >
+                        <input  onclick = "boluqer()" disabled title="Vous êtes bloqué pour le moment par un administrateur FINDME en raison de votre comportement !"
+                                type="text" placeholder="Ecrivez votre commentaire ici ..."
+                                style="padding: 11px;width: 490px" name="aa" id="aa" class="texte" />
+                        <a href="{{ path('singlepost',{'id':pub.id}) }}" > <p style="margin-top: -40px;margin-left:520px " ><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
+                        <br>
+                        <div style="background-color: #F6FDFE;padding: 1px;border-radius: 20px">
+                            <span style="font-size: medium;font-weight: bold;margin-left: 10px" id="11" class="c1"></span>
+                            <p class="msg" id="msg" style="font-size: small;margin-left: 10px"></p>
+                        </div>
+                    </form>
+                {% endif %}
             {% else %}
                 <a href="{{ path('singlepost',{'id':pub.id}) }}" ><p style="margin-left:520px"><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
             {% endif %}
         </div>
             {% endif %}
        {% endfor %}
-
     </div>
-
     </div>
-
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
-        // let map;
-        // let markers = [];
-        // function initMap() {
-        //     tab = document.querySelectorAll("div.map1");
-        //     console.log(tab[1].id);
-        //     for (let i = 0; i < tab.length; i++) {
-        //         const haightAshbury = {lat: 37.2720905, lng: 9.8708565};
-        //         map = new google.maps.Map(document.getElementById(tab[i].id), {
-        //             zoom: 10,
-        //             center: haightAshbury,
-        //             draggable: true
-        //         });
-        //     }
-        // }
-
-
+        $('#aa').mousedown(function(event) {
+            alert('Vous êtes bloqué pour le moment par un administrateur FINDME en raison de votre comportement !');
+        });
+        function boluqer(){
+            alert('Vous êtes bloqué pour le moment par un administrateur FINDME en raison de votre comportement !');
+        }
         function onClickBtnLike(event){
             event.preventDefault();
             const url = this.action;
@@ -443,14 +396,14 @@
 <!-- PhotoSwipe JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js"></script>
-<footer>
+<footer style="color: black">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="copyright-box">
                     <p class="copyright">&copy; Copyright <strong>FINDME</strong>. All Rights Reserved</p>
                     <div class="credits">
-                        Developed by <a href="https://bootstrapmade.com/">GALACTECH TEAM</a>
+                        Developed by <a href="#" style="color: black">GALACTECH TEAM</a>
                     </div>
                 </div>
             </div>
