--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -7,7 +7,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
     <!-- Favicons -->
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="{{asset("assets/img/favicon.png")}}" rel="icon">
     <link href="{{asset("assets/img/apple-touch-icon.png")}}" rel="apple-touch-icon">
     <!-- Bootstrap CSS File -->
@@ -43,7 +43,7 @@
             {% if app.user %}
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Accueil</a>
+                    <a class="nav-link js-scroll active" href="{{ path('home') }}"><i class="fas fa-home"></i> Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
@@ -52,15 +52,13 @@
                     <a class="nav-link js-scroll" href="{{ path('mespublication') }}"> Mes  publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#contact">Contact</a>
-
-                    <a class="nav-link js-scroll" href="{{path('contact')}}">Contact</a>
+                    <a class="nav-link js-scroll" href="{{path('contact')}}"> <i class="far fa-comment-dots"></i> Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('modifiercompte') }}">Compte</a>
+                    <a class="nav-link js-scroll" href="{{ path('modifiercompte') }}"><i class="far fa-user"></i> Compte</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('app_logout') }}">déconnexion</a>
+                    <a class="nav-link js-scroll" href="{{ path('app_logout') }}"><i class="fas fa-sign-out-alt"></i></a>
                 </li>
             </ul>
             {% else %}
@@ -71,9 +69,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('mespublication') }}"> Mes  publications</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link js-scroll" href="{{ path('mespublication') }}"> Mes  publications</a>#}
+{#                </li>#}
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_register') }}">Inscription</a>
                 </li>
