--- a/templates/publication/editpublication.html.twig
+++ b/templates/publication/editpublication.html.twig
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -47,61 +49,111 @@
                 <br>
                 <!----------------------------------------------->
                 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-                <script
-                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQxxrJ7IjyWm_Y0WDbp-cj-fD3EJ7Z4DA&callback=initMap&libraries=&v=weekly"
-                        defer
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQxxrJ7IjyWm_Y0WDbp-cj-fD3EJ7Z4DA&callback=initMap&libraries=&v=weekly" defer
                 ></script>
                 <style type="text/css">
-                    /* Always set the map height explicitly to define the size of the div
-                     * element that contains the map. */
                     #map {
                         height: 50%;
                     }
-                    /* Optional: Makes the sample page fill the window. */
                     #map {
                         height: 100%;
                         margin: 0;
                         padding: 0;
                     }
+                    #floating-panel {
+                        z-index: 5;
+                        background-color: #fff;
+                        padding: 5px;
+                        border: 1px solid #999;
+                        text-align: center;
+                        font-family: "Roboto", "sans-serif";
+                        line-height: 30px;
+                    }
                 </style>
                 <script>
+                    let map;
+                    let markers = [];
                     function initMap() {
-                        const myLatLng = { lat:37.2720905, lng: 9.8708565 };
-                        const map = new google.maps.Map(document.getElementById("map"), {
+                        const myLatLng = { lat:Number({{ pub1.longitude}}), lng: Number({{ pub1.latitude }}) };
+                         map = new google.maps.Map(document.getElementById("map"), {
                             zoom: 10,
                             center: myLatLng,
+                            draggable: true
+
                         });
-                        new google.maps.Marker({
+
+
+                        markers.push(new google.maps.Marker({
                             position: myLatLng,
                             map,
-                            title: "Hello World!",
+                            title: "Localisation",
+
+                        }));
+                        map.addListener("click", (event) => {
+                            addMarker(event.latLng);
                         });
                     }
+
+                    function addMarker(location) {
+                        if (markers.length === 1) {
+                            alert('Vous devez choisir un seule localisation !\nVous pouvez supprimer la localisation choisie par le bouton Supprimer Markeur !');
+                        } else {
+                            if (markers.length === 0) {
+                                const marker = new google.maps.Marker({
+                                    position: location,
+                                    map: map,
+                                });
+                                markers.push(marker);
+                            }
+                        }
+                        document.getElementById('tableau1').setAttribute("value",markers[0].position.lat());
+                        document.getElementById('tableau2').setAttribute("value",markers[0].position.lng());
+                        // console.log(geocoder.reverseGeocodeCoordinate(markers[0].position));
+                        console.log(document.getElementById('tableau1'),document.getElementById('tableau2'));
+                    }
+
+
+                    function setMapOnAll(map) {
+                        for (let i = 0; i < markers.length; i++) {
+                            markers[i].setMap(map);
+                        }
+                    }
+
+                    // Removes the markers from the map, but keeps them in the array.
+                    function clearMarkers() {
+                        setMapOnAll(null);
+                    }
+
+                    // Shows any markers currently in the array.
+                    function showMarkers() {
+                        setMapOnAll(map);
+                    }
+
+                    // Deletes all markers in the array by removing references to them.
+                    function deleteMarkers() {
+                        clearMarkers();
+                        markers = [];
+                    }
+
                 </script>
                 <br>
-
                 <!------------------------------------------------------------------->
                 <div class="col" style="margin-left:10px">
                     {{ form_widget(form1.contenu_pub,{'attr':{'placeholder':pub1.contenupub,'class':'form-control','cols':'30','rows':'4'}}) }}
                 </div>
                 <br>
+                <div id="floating-panel">
+                    {#                    <input onclick="clearMarkers();" type="button" value="Hide Markers" />#}
+                    {#                    <input onclick="showMarkers();" type="button" value="Show All Markers" />#}
+                    <input onclick="deleteMarkers();" type="button" value="Supprimer Markeur" />
+                </div>
                 <div id="map" style="margin-left:10px"></div>
-            </div>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <div class="col">
-                <div style="margin-left: 80px">
-                    <label for="upload" class="btn btn-light m-0 rounded-pill px-4">
-                        <i class="fa fa-cloud-upload mr-2 text-muted"></i>
-                        <small class="text-uppercase font-weight-bold text-muted">Choisir 4 photos</small>
-                        <br>
-                        <input type="file" name="files[]"  id="files" multiple="multiple" accept="image/jpg,image/png, image/jpeg" aria-valuemax="" />
-                    </label>
-                </div>
-                <div style="height: 20px;">
-                </div>
+                <input type="hidden"  id="tableau1"  name="markers1" value="">
+                <input type="hidden"  id="tableau2"  name="markers2" value="">
             </div>
             <br>
-            <a href="{{ path('newpost') }}" class="button button-a button-big button-rouded"  style="margin-left: 200px"><button type="submit" style="background-color: transparent;border: navajowhite;color: white">EDIT</button> </a>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <a href="{{ path('editpost',{'id':pub1.id}) }}" class="button button-a button-big button-rouded"  style="margin-left: 200px"><button type="submit" style="background-color: transparent;border: navajowhite;color: white">Modifier</button> </a>
             {{ form_end(form1) }}
         </div>
     </div>
@@ -131,14 +183,14 @@
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-<footer>
+<footer style="color: black">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="copyright-box">
                     <p class="copyright">&copy; Copyright <strong>FINDME</strong>. All Rights Reserved</p>
                     <div class="credits">
-                        Developed by <a href="https://bootstrapmade.com/">GALACTECH TEAM</a>
+                        Developed by <a href="#" style="color: black">GALACTECH TEAM</a>
                     </div>
                 </div>
             </div>
